tests/should_succeed/array_explicit_cast.jou
import "stdlib/io.jou"

def main() -> int:
    foo: int[2] = [1, 2]
    bar: double[2] = foo as double[2]
    printf("%f %f\n", bar[0], bar[1])  # Output: 1.000000 2.000000
    return 0
