tests/syntax_error/keyword_uint32.jou
def main() -> int:
    uint32 = 1  # Error: expected an expression, got the 'uint32' keyword
    return 0
